--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-google-maps/api": "^2.20.8",
     "@types/lodash": "^4.17.23",
+    "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
