PWA Mobil Uygulama Yükleme ve İkon Sistemi
- PWA yükleme prompt'u: Uygulama açılınca tam ekran yükleme daveti
- Android (Opera/Chrome): beforeinstallprompt + fallback manuel kılavuz
- iOS: Adım adım 'Ana Ekrana Ekle' guide
- PNG ikonlar: 72-512px arası tüm boyutlar + maskable ikon
- Service Worker: Network-first caching stratejisi, offline destek
- Manifest: Tam PWA uyumlu yapılandırma, shortcuts eklendi
- Apple Touch Icons: PNG formatında düzgün referanslar

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,33 +1,97 @@
 {
-    "name": "YolTakip - Yolculuk ve Ödeme",
+    "name": "YolTakip - Yolculuk ve Ödeme Takibi",
     "short_name": "YolTakip",
-    "description": "Arkadaş gruplarının işe gidiş-geliş araç paylaşımını ve ödeme hesaplarını takip edin.",
+    "description": "Arkadaş gruplarının işe gidiş-geliş araç paylaşımını, GPS güzergah takibini ve ödeme hesaplarını kolaylaştıran uygulama.",
     "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "orientation": "portrait",
-    "background_color": "#ffffff",
+    "background_color": "#0f172a",
     "theme_color": "#2563eb",
+    "lang": "tr",
+    "dir": "ltr",
     "categories": [
         "finance",
         "navigation",
         "productivity"
     ],
+    "prefer_related_applications": false,
     "icons": [
+        {
+            "src": "/icons/icon-72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/icon-96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/icon-128x128.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/icons/icon-384x384.png",
+            "sizes": "384x384",
+            "type": "image/png"
+        },
+        {
+            "src": "/icons/icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "/icons/maskable-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
         {
             "src": "/icon.svg",
             "sizes": "any",
-            "type": "image/svg+xml",
-            "purpose": "any maskable"
+            "type": "image/svg+xml"
+        }
+    ],
+    "screenshots": [],
+    "shortcuts": [
+        {
+            "name": "Ana Sayfa",
+            "url": "/",
+            "icons": [
+                {
+                    "src": "/icons/icon-96x96.png",
+                    "sizes": "96x96"
+                }
+            ]
         },
         {
-            "src": "/icon.svg",
-            "sizes": "192x192",
-            "type": "image/svg+xml"
-        },
-        {
-            "src": "/icon.svg",
-            "sizes": "512x512",
-            "type": "image/svg+xml"
+            "name": "Güzergah Arşivi",
+            "url": "/admin/tracks",
+            "icons": [
+                {
+                    "src": "/icons/icon-96x96.png",
+                    "sizes": "96x96"
+                }
+            ]
         }
     ]
 }
