--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-local": "next dev -p 3035",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
